--- a/public/index.html
+++ b/public/index.html
@@ -10,13 +10,13 @@
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Instagraam</title>
     <style>
       body {
         background-color:#fafafa;
       }
-    </style>
+      </style>
+      <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
